Also add pom.xml for maven project and have generic ListAgent