@@ -6,14 +6,10 @@
 package nl.coenvl.sam.variables;
 
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.LinkedList;
-import java.util.UUID;
+import java.util.List;
 
-import nl.coenvl.sam.agents.AbstractPropertyOwner;
 import nl.coenvl.sam.exceptions.InvalidDomainException;
-import nl.coenvl.sam.exceptions.InvalidValueException;
-import nl.coenvl.sam.exceptions.VariableNotSetException;
 
 /**
  * FixedPrecisionVariable
@@ -22,23 +18,9 @@ import nl.coenvl.sam.exceptions.VariableNotSetException;
  * @version 0.1
  * @since 23 sep. 2016
  */
-public class FixedPrecisionVariable extends AbstractPropertyOwner implements DiscreteVariable<Double> {
-
-    private static final double UNDEFINED = -Double.MAX_VALUE;
+public class FixedPrecisionVariable extends ListVariable<Double> {
 
     private static int unnamedVariableSequence = 0;
-
-    private final UUID id;
-
-    private final double lowerBound;
-    private final double upperBound;
-    private final double step;
-    private final LinkedList<Double> attainableValues;
-
-    private final String name;
-
-    private boolean set = false;
-    private double value = FixedPrecisionVariable.UNDEFINED;
 
     /**
      * Creates a variable with a given lower bound and upper bound. Future calls to setValue will never be able to set
@@ -80,170 +62,20 @@ public class FixedPrecisionVariable extends AbstractPropertyOwner implements Dis
             final double upperBound,
             final double step,
             final String name) throws InvalidDomainException {
+        super(FixedPrecisionVariable.generateDomain(lowerBound, upperBound, step), name);
+    }
+
+    private static List<Double> generateDomain(final double lowerBound, final double upperBound, final double step)
+            throws InvalidDomainException {
         if ((lowerBound > upperBound) || (step <= 0) || (step > (upperBound - lowerBound))) {
             throw new InvalidDomainException();
         }
 
-        this.name = name;
-        this.lowerBound = lowerBound;
-        this.upperBound = upperBound;
-        this.step = step;
-
-        this.attainableValues = new LinkedList<>();
+        final List<Double> domain = new LinkedList<>();
         for (double d = lowerBound; d <= upperBound; d += step) {
-            this.attainableValues.add(new Double(d));
+            domain.add(Double.valueOf(d));
         }
-
-        this.id = UUID.randomUUID();
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#clear()
-     */
-    @Override
-    public void clear() {
-        this.set = false;
-        this.value = FixedPrecisionVariable.UNDEFINED;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#clone()
-     */
-    @Override
-    public FixedPrecisionVariable clone() {
-        FixedPrecisionVariable ret = null;
-        try {
-            ret = new FixedPrecisionVariable(this.lowerBound, this.upperBound, this.step, this.name + " (clone)");
-            ret.value = this.value;
-        } catch (final InvalidDomainException e) {
-            e.printStackTrace();
-        }
-        return ret;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#getLowerBound()
-     */
-    @Override
-    public Double getLowerBound() {
-        return this.lowerBound;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#getName()
-     */
-    @Override
-    public String getName() {
-        return this.name;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#getRandomValue()
-     */
-    @Override
-    public Double getRandomValue() {
-        return this.lowerBound + (Math.floor(this.getRange() * Math.random()) * this.step);
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#getUpperBound()
-     */
-    @Override
-    public Double getUpperBound() {
-        return this.attainableValues.getLast();
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#getValue()
-     */
-    @Override
-    public Double getValue() throws VariableNotSetException {
-        if (!this.set) {
-            throw new VariableNotSetException();
-        }
-
-        return this.value;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#isSet()
-     */
-    @Override
-    public boolean isSet() {
-        return this.set;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#setValue(java.lang.Object)
-     */
-    @Override
-    public Variable<Double> setValue(final Double value) throws InvalidValueException {
-        if ((value < this.lowerBound) || (value > this.upperBound)) {
-            throw new InvalidValueException(value);
-        } else if (!this.attainableValues.contains(value)) {
-            Double best = this.lowerBound;
-            double mindiff = Double.MAX_VALUE;
-            for (final Double possible : this.attainableValues) {
-                final double diff = Math.abs(possible - value);
-                if (diff < mindiff) {
-                    mindiff = diff;
-                    best = possible;
-                }
-            }
-            this.value = best;
-        } else {
-            this.value = value;
-        }
-        this.set = true;
-        return this;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.Variable#getID()
-     */
-    @Override
-    public UUID getID() {
-        return this.id;
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.DiscreteVariable#getRange()
-     */
-    @Override
-    public int getRange() {
-        return this.attainableValues.size();
-    }
-
-    /*
-     * (non-Javadoc)
-     *
-     * @see nl.coenvl.sam.variables.DiscreteVariable#iterator()
-     */
-    @Override
-    public Iterator<Double> iterator() {
-        return Collections.unmodifiableList(this.attainableValues).iterator();
+        return Collections.unmodifiableList(domain);
     }
 
 }
